<resources>
    <string name="app_name">OPQ</string>

    <string name="one_piece_quiz">One Piece Quiz</string>
    <string name="Start">Start Quiz</string>

    //The text in the textView2
    <string name="TextView2">
    Welcome travellers on your journey to either become the king of pirates or a side character, this quiz will challenge even the most hardcore, one piece lovers, on their knowledge about the beautiful lore of the grand line. Each game will be 6 questions then results will be dished out in the form of 3 different images, (Foxy Pirate, Pirate king)
    Don’t cheat and have fun, thanks for playing with my app.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="won">WON</string>
    <string name="king">king</string>
    <string name="kingOfPi">you are the king of pirates</string>
    <string name="you_ve_won">you have won</string>
    <string name="you_ve_lost">You have Lost</string>
    <string name="lose">lose</string>
    <string name="hello_world">You are a foxy pirate</string>
    <string name="restart">restart</string>
    <string name="restart1">restart</string>


</resources>