<?xml version="1.0" encoding="utf-8"?>
<layout>


<LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/luffy"
    tools:context=".FragmentMainScreen">

    <TextView
        android:id="@+id/textView"
        android:textAllCaps="true"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        android:gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/one_piece_quiz"
        android:textStyle="bold"/>


   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="30dp"
       android:layout_marginStart="20dp"
       android:layout_marginEnd="20dp"
       android:background="@android:color/white"
       app:cardElevation="5dp">



       <TextView
           android:id="@+id/textView2"
           android:textAllCaps="true"
           android:textAlignment="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="@string/TextView2"
           android:textColor="@color/black"
           android:textSize="19sp"
           android:textStyle="bold" />


   </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start"
        android:layout_marginTop="30dp"/>


</LinearLayout>
</layout>